# second-brain

./: .env.example  .gitignore  AGENTS.md  README.md  SECURITY.md  pyproject.toml
channels/: __init__.py
channels/telegram/: __init__.py  api.py  main.py  scheduler.py
core/: __init__.py  agent.py  blogs.py  config.py  digests.py  localization.py  news.py  tools.py
skills/: README.md
skills/blog-fetch/: SKILL.md
skills/briefing-compose/: SKILL.md
skills/news-normalize/: SKILL.md
tests/: test_agent_runtime.py  test_blog_posts.py  test_config.py  test_digest.py  test_main.py  test_telegram_api.py
